--- a/css/mail.css
+++ b/css/mail.css
@@ -186,12 +186,12 @@ button.control {
 	opacity: .5;
 }
 
-.msg.success {
+#app-content .msg.success {
 	color: #fff;
 	background-color: #47a447;
 	padding: 3px;
 }
-.msg.error {
+#app-content .msg.error {
 	color: #fff;
 	background-color: #d2322d;
 	padding: 3px;
