--- a/css/mail.css
+++ b/css/mail.css
@@ -433,6 +433,14 @@
 	float: left;
 }
 
+#fileupload {
+	display: none;
+}
+
+#mail_new_attachment_local {
+	display: inline;
+}
+
 .unread {
 	font-weight: bold;
 }
