--- a/css/mail.css
+++ b/css/mail.css
@@ -224,20 +224,23 @@
 	overflow-x: hidden;
 	overflow-y: auto;
 }
-#load-new-mail-messages,
 #load-more-mail-messages {
 	display: none;
-	margin: 10px auto;
-	padding: 10px 10px 6px;
+	height: 68px;
+	border-top: 1px solid #eee;
+	-webkit-box-shadow: inset 0 4px 9px -6px rgba(0,0,0,.8);
+  -moz-box-shadow: inset 0 4px 9px -6px rgba(0,0,0,.8);
+  box-shadow: inset 0 4px 9px -6px rgba(0,0,0,.8);
+	transition: opacity 1s linear;
 }
-#load-more-mail-messages {
-	margin-bottom: 250px;
-}
-/* TODO: put this in core icons.css as general rule for buttons with icons */
-#load-new-mail-messages.icon-loading-small,
-#load-more-mail-messages.icon-loading-small {
-	padding-left: 32px;
-	background-position: 9px center;
+
+#load-more-mail-messages span {
+	width: 100%;
+	display: inline-block;
+  vertical-align: middle;
+	text-align: center;
+	line-height: 68px;
+	font-size: 16px;
 }
 
 .mail-message-header {
