That darn #content-wrapper was the issue. That too, was set to an absolute position, I hadn't caught it last time.

--- a/css/print.css
+++ b/css/print.css
@@ -2,9 +2,21 @@
   display: none;
 }
 
+#app{
+}
+
 #mail-message{
+  position: relative;
   width: 95%;
   overflow-x: auto;
+  overflow-y: auto;
+}
+
+#content-wrapper{
+  position: relative;
+}
+
+#app-content{
 }
 
 #mail-message-header{
