--- a/css/mail.css
+++ b/css/mail.css
@@ -524,6 +524,10 @@ input.submit-message {
 	width: 100%;
 }
 
+#show-images-text {
+	display: none;
+}
+
 #mail-content a,
 .mail-signature a {
 	color: #07d;
