--- a/js/templates/account.html
+++ b/js/templates/account.html
@@ -2,5 +2,12 @@
 <div class="mail-account-color" style="background-color: {{accountColor email}}"></div>
 {{/if}}
 <h2 class="mail-account-email" title="{{email}}">{{email}}</h2>
+<div class="app-navigation-entry-utils-menu-button svg"><button></button></div>
+<div class="app-navigation-entry-menu open">
+    <ul>
+        <li><button class="icon-add svg" title="">Add account</button></li>
+        <li><button class="icon-delete svg" title="">Remove account</button></li>
+    </ul>
+</div>
 <ul id="mail_folders" class="mail_folders with-icon" data-account_id="{{id}}">
 </ul>
