--- a/css/mail.css
+++ b/css/mail.css
@@ -810,6 +810,6 @@ input.submit-message,
 	margin:3px auto;
 }
 .toggle-editor-wrapper{
-	margin:3px;
-	padding:2px;
+	margin:3px 0;
+	padding:2px 0;
 }
