--- a/js/templates/composer.html
+++ b/js/templates/composer.html
@@ -45,6 +45,11 @@
 		<textarea name="body" class="message-body
 					{{#if isReply}} reply{{/if}}"
 			placeholder="{{ t 'Message …' }}">{{message}}</textarea>
+			<div class="toggle-editor-wrapper">
+				<label class="toggle-switch"><input type="checkbox" class="toggle-editor" name="toggle" />
+				<div class="toggle-slider round"></div></label>
+				<span class="editor-toggle-text"> Rich Text Editing</span>
+			</div>
 	</div>
 	<div class="submit-message-wrapper">
 		<input class="submit-message send primary" type="submit" value="{{submitButtonTitle}}" disabled>
@@ -53,3 +58,4 @@
 	<div class="new-message-attachments">
 	</div>
 </div>
+
