--- a/js/templates/message-list.html
+++ b/js/templates/message-list.html
@@ -2,5 +2,14 @@
 	<div class="icon-mail"></div>
 	<h2>{{ t 'No messages in this folder!' }}</h2>
 </div>
+<div id="ptr">
+	<span class="genericon genericon-next"></span>
+
+	<div class="loading">
+		<span id="l1"></span>
+		<span id="l2"></span>
+		<span id="l3"></span>
+	</div>
+</div>
 <div id="mail-message-list"></div>
 <div id="load-more-mail-messages"></div>
