--- a/css/mail.css
+++ b/css/mail.css
@@ -821,3 +821,10 @@ input.submit-message,
 	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=40)";
 	opacity: .4;
 }
+
+textarea.signature-body {
+	width: 100%;
+	margin: 0;
+	min-height: 200px;
+	resize: none;
+}
